--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.3"
 requests = "^2.32.3"
 certifi = "^2024.8.30"
 python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.35"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
