--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ psycopg2 = "^2.9.10"
 sqlalchemy-redshift = "^0.8.14"
 pyarrow = "^17.0.0"
 fastparquet = "^2024.5.0"
+awswrangler = "^3.9.1"
+redshift-connector = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
