--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pyarrow = "^17.0.0"
 fastparquet = "^2024.5.0"
 awswrangler = "^3.9.1"
 redshift-connector = "^2.1.3"
+plotly = "^5.24.1"
+dash = "^2.18.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
